feat: - currency actions added
